--- a/src/AdventOfCode.Lib/AdventOfCode.Lib.csproj
+++ b/src/AdventOfCode.Lib/AdventOfCode.Lib.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="dotenv.net" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.43.0" />
