--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
-  <PropertyGroup>
+  <PropertyGroup Label="Common Properties">
     <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <Authors>Joseph Petersen</Authors>
     <Company>$(Authors)</Company>
@@ -8,7 +8,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
+  <PropertyGroup Condition="'$(DeterministicBuild)' == 'true'">
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+  </PropertyGroup>
+
+  <ItemGroup Label="Package References">
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,11 +21,7 @@
     <PackageReference Include="Roslynator.Analyzers" Version="3.3.0" PrivateAssets="All" />
   </ItemGroup>
 
-  <PropertyGroup Condition="'$(DeterministicBuild)' == 'true'">
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-  </PropertyGroup>
-
-  <ItemGroup Condition=" '$(IsTestProject)' == 'true' ">
+  <ItemGroup Label="Tests Package References" Condition="'$(IsTestProject)' == 'true'">
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -33,5 +33,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Label="Usings">
+    <Using Include="AdventOfCode.Lib" />
+  </ItemGroup>
+
+  <ItemGroup Label="Tests usings" Condition="'$(IsTestProject)' == 'true'">
+    <Using Include="Xunit"  />
   </ItemGroup>
 </Project>
