--- a/src/AdventOfCode.Year2020/AdventOfCode.Year2020.csproj
+++ b/src/AdventOfCode.Year2020/AdventOfCode.Year2020.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\AdventOfCode.Lib\AdventOfCode.Lib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Inputs\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
