--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup Label="Tests usings" Condition="'$(IsTestProject)' == 'true'">
-    <Using Include="Xunit"  />
+    <Using Include="Xunit" />
+    <Using Include="FluentAssertions" />
   </ItemGroup>
 </Project>
