--- a/tests/AdventOfCode.Year2021.Tests/AdventOfCode.Year2021.Tests.csproj
+++ b/tests/AdventOfCode.Year2021.Tests/AdventOfCode.Year2021.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <SrcProject>$(MSBuildProjectName.TrimEnd(".Tests"))</SrcProject>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
