--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,8 @@ jobs:
           dotnet-version: |
             6.0.x
 
-      - uses: actions/cache@v2
+      - name: Cache NuGet
+        uses: actions/cache@v2
         with:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
@@ -48,7 +49,8 @@ jobs:
           dotnet-version: |
             6.0.x
 
-      - uses: actions/cache@v2
+      - name: Cache NuGet
+        uses: actions/cache@v2
         with:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
@@ -76,7 +78,8 @@ jobs:
           dotnet-version: |
             6.0.x
 
-      - uses: actions/cache@v2
+      - name: Cache NuGet
+        uses: actions/cache@v2
         with:
           path: ~/.nuget/packages
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
